--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 </head>
 
 <body>
-    <!-- Navbar  -->
     <header class="header">
-
+        <!-- Navbar  -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="./assets/images/xinder.png" alt=""></a>
@@ -43,15 +42,34 @@
                         </li>
                         <button class="nav-btn">
                             <li class="nav-item">
-                                <a class="nav-link " aria-current="page" href="#">Home</a>
+                                <a class="nav-link " aria-current="page" href="#"><span
+                                        style="padding: 0px 0px 0px 16px;">Join Now</span></a>
                             </li>
                         </button>
                     </ul>
                 </div>
             </div>
         </nav>
+        <!-- Navbar  -->
+        <!-- Hero Section  -->
+        <section class="hero-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2 class="hero-head">Search the work of the best artists</h2>
+                    </div>
+                </div>
+                <div class="search-icon">
+                    <img src="./assets/images/search.png" style="position: relative; top: 36px; left: 15px;" alt="">
+                    <!-- You can use any search icon you prefer, in this example, we're using Font Awesome -->
+                </div>
+                <input type="text" class="hero-input" placeholder="search for artists, work name, or category">
+                <button class="hero-inpput-btn"><span class="search-text">Search</span></button>
+            </div>
+        </section>
+        <!-- Hero Section  -->
+
     </header>
-    <!-- Navbar  -->
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
