--- a/index.html
+++ b/index.html
@@ -55,16 +55,31 @@
         <section class="hero-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <h2 class="hero-head">Search the work of the best artists</h2>
+                    <div class="col-lg-7">
+                        <h1 class="hero-head">Search the work of the best artists</h1>
+                        <div>
+                            <div class="search-icon">
+                                <img src="./assets/images/search.png" style="position: relative; top: 36px; left: 15px;"
+                                    alt="">
+                                <!-- You can use any search icon you prefer, in this example, we're using Font Awesome -->
+                            </div>
+                            <input type="text" class="hero-input"
+                                placeholder="search for artists, work name, or category">
+                            <button class="hero-inpput-btn"><span class="search-text">Search</span></button>
+                            <div class="mt-3">
+                                <span class="option-text">Oil Painting</span>
+                                <span class="option-text">Abstract Art</span>
+                                <span class="option-text">Sculpture</span>
+                                <span class="option-text">Art Deco</span>
+                                <span class="option-text">Pop Art</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <img src="./assets/images/hero-section-character.png" class="hero-img" alt="">
                     </div>
                 </div>
-                <div class="search-icon">
-                    <img src="./assets/images/search.png" style="position: relative; top: 36px; left: 15px;" alt="">
-                    <!-- You can use any search icon you prefer, in this example, we're using Font Awesome -->
-                </div>
-                <input type="text" class="hero-input" placeholder="search for artists, work name, or category">
-                <button class="hero-inpput-btn"><span class="search-text">Search</span></button>
+
             </div>
         </section>
         <!-- Hero Section  -->
