sponsor section created

--- a/index.html
+++ b/index.html
@@ -83,9 +83,17 @@
             </div>
         </section>
         <!-- Hero Section  -->
-
     </header>
 
+    <section class="sponser">
+        <div class="d-flex justify-content-center sponsor-img" style="padding: 36px;">
+            <img class="sponsor-img" src="./assets/images/smartfinder.png" alt="">
+            <img class="sponsor-img" src="./assets/images/zoomerr.png" alt="">
+            <img class="sponsor-img" src="./assets/images/shells.png" alt="">
+            <img class="sponsor-img" src="./assets/images/waves.png" alt="">
+            <img class="sponsor-img" src="./assets/images/artvenue.png" alt="">
+        </div>
+    </section>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
