--- a/index.html
+++ b/index.html
@@ -86,12 +86,26 @@
     </header>
 
     <section class="sponser">
-        <div class="d-flex justify-content-center sponsor-img" style="padding: 36px;">
-            <img class="sponsor-img" src="./assets/images/smartfinder.png" alt="">
-            <img class="sponsor-img" src="./assets/images/zoomerr.png" alt="">
-            <img class="sponsor-img" src="./assets/images/shells.png" alt="">
-            <img class="sponsor-img" src="./assets/images/waves.png" alt="">
-            <img class="sponsor-img" src="./assets/images/artvenue.png" alt="">
+        <div class="marquee-container">
+            <div class="marquee">
+                <div class="d-flex justify-content-center" style="padding-top: 40px;padding-bottom: 40px;">
+                    <div class="sponsor-img">
+                        <img src="./assets/images/smartfinder.png" alt="">
+                    </div>
+                    <div class="sponsor-img">
+                        <img src="./assets/images/zoomerr.png" alt="">
+                    </div>
+                    <div class="sponsor-img">
+                        <img src="./assets/images/shells.png" alt="">
+                    </div>
+                    <div class="sponsor-img">
+                        <img src="./assets/images/waves.png" alt="">
+                    </div>
+                    <div class="sponsor-img">
+                        <img src="./assets/images/artvenue.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
