featured categories desktop ready

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </section>
         <!-- Hero Section  -->
     </header>
-
+    <!-- sponsor  -->
     <section class="sponser">
         <div class="marquee-container">
             <div class="marquee">
@@ -108,6 +108,45 @@
             </div>
         </div>
     </section>
+    <!-- sponsor  -->
+
+    <!-- Featured art category  -->
+    <section class="featured-art-category">
+        <div class="container">
+            <div class="art-title d-flex justify-content-between ">
+                <span>
+                    <h3>Featured art categories</h3>
+                </span>
+                <span class="mt-1 sponsor-img-categories categories mt-3 ">View All Categories <img
+                        src="./assets/images/arrow-right.png" alt=""></span>
+            </div>
+            <div class="d-flex justify-content-center" style="padding-top: 40px; padding-bottom: 40px;">
+                <div class="content-img">
+                    <img src="./assets/images/content_box_1.png" alt="" class="img-fluid content-img"
+                        style="height: 300px;padding: 0px 12px 0px 12px;">
+                </div>
+                <div class="content-img">
+                    <img src="./assets/images/content_box_2.png" alt="" class="img-fluid content-img"
+                        style="height: 300px;padding: 0px 12px 0px 12px;">
+                </div>
+                <div class="content-img">
+                    <img src="./assets/images/content_box_3.png" alt="" class="img-fluid content-img"
+                        style="height: 300px;padding: 0px 12px 0px 12px;">
+                </div>
+                <div class="content-img">
+                    <img src="./assets/images/content_box_4.png" alt="" class="img-fluid content-img"
+                        style="height: 300px;padding: 0px 12px 0px 12px;">
+                </div>
+                <div class="content-img">
+                    <img src="./assets/images/content_box_5.png" alt="" class="img-fluid content-img"
+                        style="height: 300px;padding: 0px 12px 0px 12px;">
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- Featured art category  -->
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
