--- a/index.html
+++ b/index.html
@@ -147,6 +147,172 @@
     </section>
     <!-- Featured art category  -->
 
+    <!-- Last masterpiece  -->
+    <section class="last-masterpiece">
+        <div class="container">
+            <div class="art-title d-flex justify-content-between ">
+                <span>
+                    <h3>Featured art categories</h3>
+                </span>
+                <span class="mt-1 sponsor-img-categories categories mt-3 ">View All Categories <img
+                        src="./assets/images/arrow-right.png" alt=""></span>
+            </div>
+            <div id="container">
+                <div id="slider-container">
+                    <span onclick="slideRight()" class="btn"></span>
+                    <div id="slider">
+                        <div class="slide">
+                            <div class="card" style="width: 16rem;border :none">
+                                <img src="./assets/images/slide-card-1.png" class="card-img-top" alt="...">
+                                <div class="card-body d-flex pb-4 ">
+                                    <div>
+                                        <img src="./assets/images/card-user.png" alt="">
+                                    </div>
+                                    <div>
+                                        <div class="card-text ms-2 " style="font-size: 16px;">Flower Decorations</div>
+                                        <div class="ms-2"
+                                            style="font-size: 14px;font-weight: 400; color: #475569;margin-bottom: 20px;">
+                                            by
+                                            Melvina Spring
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="card" style="width: 16rem;border :none">
+                                <img src="./assets/images/slide-crad-2.png" class="card-img-top" alt="...">
+                                <div class="card-body d-flex pb-4 ">
+                                    <div>
+                                        <img src="./assets/images/user-2.png" alt="">
+                                    </div>
+                                    <div>
+                                        <div class="card-text ms-2 " style="font-size: 16px;">Flower Decorations</div>
+                                        <div class="ms-2"
+                                            style="font-size: 14px;font-weight: 400; color: #475569;margin-bottom: 20px;">
+                                            by
+                                            Melvina Spring
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="card" style="width: 16rem;border :none">
+                                <img src="./assets/images/slide-crad-3.png" class="card-img-top" alt="...">
+                                <div class="card-body d-flex pb-4 ">
+                                    <div>
+                                        <img src="./assets/images/user-3.png" alt="">
+                                    </div>
+                                    <div>
+                                        <div class="card-text ms-2 " style="font-size: 16px;">Flower Decorations</div>
+                                        <div class="ms-2"
+                                            style="font-size: 14px;font-weight: 400; color: #475569;margin-bottom: 20px;">
+                                            by
+                                            Melvina Spring
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="card" style="width: 16rem;border :none">
+                                <img src="./assets/images/slide-crad-4.png" class="card-img-top" alt="...">
+                                <div class="card-body d-flex pb-4 ">
+                                    <div>
+                                        <img src="./assets/images/user-4.png" alt="">
+                                    </div>
+                                    <div>
+                                        <div class="card-text ms-2 " style="font-size: 16px;">Flower Decorations</div>
+                                        <div class="ms-2"
+                                            style="font-size: 14px;font-weight: 400; color: #475569;margin-bottom: 20px;">
+                                            by
+                                            Melvina Spring
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="card" style="width: 16rem;border :none">
+                                <img src="./assets/images/slide-card-1.png" class="card-img-top" alt="...">
+                                <div class="card-body d-flex pb-4 ">
+                                    <div>
+                                        <img src="./assets/images/card-user.png" alt="">
+                                    </div>
+                                    <div>
+                                        <div class="card-text ms-2 " style="font-size: 16px;">Flower Decorations</div>
+                                        <div class="ms-2"
+                                            style="font-size: 14px;font-weight: 400; color: #475569;margin-bottom: 20px;">
+                                            by
+                                            Melvina Spring
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="card" style="width: 16rem;border :none">
+                                <img src="./assets/images/slide-crad-2.png" class="card-img-top" alt="...">
+                                <div class="card-body d-flex pb-4 ">
+                                    <div>
+                                        <img src="./assets/images/user-2.png" alt="">
+                                    </div>
+                                    <div>
+                                        <div class="card-text ms-2 " style="font-size: 16px;">Flower Decorations</div>
+                                        <div class="ms-2"
+                                            style="font-size: 14px;font-weight: 400; color: #475569;margin-bottom: 20px;">
+                                            by
+                                            Melvina Spring
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="card" style="width: 16rem;border :none">
+                                <img src="./assets/images/slide-crad-3.png" class="card-img-top" alt="...">
+                                <div class="card-body d-flex pb-4 ">
+                                    <div>
+                                        <img src="./assets/images/user-3.png" alt="">
+                                    </div>
+                                    <div>
+                                        <div class="card-text ms-2 " style="font-size: 16px;">Flower Decorations</div>
+                                        <div class="ms-2"
+                                            style="font-size: 14px;font-weight: 400; color: #475569;margin-bottom: 20px;">
+                                            by
+                                            Melvina Spring
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="card" style="width: 16rem;border :none">
+                                <img src="./assets/images/slide-crad-4.png" class="card-img-top" alt="...">
+                                <div class="card-body d-flex pb-4 ">
+                                    <div>
+                                        <img src="./assets/images/user-4.png" alt="">
+                                    </div>
+                                    <div>
+                                        <div class="card-text ms-2 " style="font-size: 16px;">Flower Decorations</div>
+                                        <div class="ms-2"
+                                            style="font-size: 14px;font-weight: 400; color: #475569;margin-bottom: 20px;">
+                                            by
+                                            Melvina Spring
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <span onclick="slideLeft()" class="btn"></span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Last masterpiece  -->
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
