heading color change

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- Header  -->
     <header class="header">
         <!-- Navbar  -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
@@ -84,6 +85,8 @@
         </section>
         <!-- Hero Section  -->
     </header>
+    <!-- Header  -->
+
     <!-- sponsor  -->
     <section class="sponser">
         <div class="marquee-container">
@@ -115,7 +118,7 @@
         <div class="container">
             <div class="art-title d-flex justify-content-between ">
                 <span>
-                    <h3>Featured art categories</h3>
+                    <h3 style="color: #0F172A;">Featured art categories</h3>
                 </span>
                 <span class="mt-1 sponsor-img-categories categories mt-3 ">View All Categories <img
                         src="./assets/images/arrow-right.png" alt=""></span>
@@ -152,9 +155,9 @@
         <div class="container">
             <div class="art-title d-flex justify-content-between ">
                 <span>
-                    <h3>Featured art categories</h3>
+                    <h3 style="color: #0F172A;">Latest masterpieces</h3>
                 </span>
-                <span class="mt-1 sponsor-img-categories categories mt-3 ">View All Categories <img
+                <span class="mt-1 sponsor-img-categories categories mt-3 ">Discover More Masterpieces<img
                         src="./assets/images/arrow-right.png" alt=""></span>
             </div>
             <div id="container">
@@ -312,6 +315,12 @@
         </div>
     </section>
     <!-- Last masterpiece  -->
+    <!-- Expanding services  -->
+    <section class="expanding-services">
+        <h3 style="color: #0F172A;text-align: center;">Expanding Services</h3>
+
+    </section>
+    <!-- Expanding services  -->
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
