expanding section created

--- a/index.html
+++ b/index.html
@@ -318,7 +318,29 @@
     <!-- Expanding services  -->
     <section class="expanding-services">
         <h3 style="color: #0F172A;text-align: center;">Expanding Services</h3>
-
+        <div class="d-flex justify-content-center" style="margin-top: 80px;">
+            <div class="sponsor-img-expanding">
+                <img src="./assets/images/expanding-content-box.png" alt="">
+            </div>
+            <div class="sponsor-img-expanding">
+                <img src="./assets/images/expanding-content-box-2.png" alt="">
+            </div>
+            <div class="sponsor-img-expanding">
+                <img src="./assets/images/expanding-content-box-3.png" alt="">
+            </div>
+            <div class="sponsor-img-expanding">
+                <img src="./assets/images/expanding-content-box-4.png" alt="">
+            </div>
+            <div class="sponsor-img-expanding">
+                <img src="./assets/images/expanding-content-box-5.png" alt="">
+            </div>
+            <div class="sponsor-img-expanding">
+                <img src="./assets/images/expanding-content-box-6.png" alt="">
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center" style="margin-top:80px;">
+            <button class="find-service-btn"><span class="search-text">Find Services</span></button>
+        </div>
     </section>
     <!-- Expanding services  -->
 
