best solution section created

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
         </div>
     </section>
     <!-- Last masterpiece  -->
+
     <!-- Expanding services  -->
     <section class="expanding-services">
         <h3 style="color: #0F172A;text-align: center;">Expanding Services</h3>
@@ -343,6 +344,36 @@
         </div>
     </section>
     <!-- Expanding services  -->
+
+    <!-- Best solution  -->
+    <section class="best-solution">
+        <div class="container">
+            <div class="row">
+                <div class="col-7">
+                    <h2 style="color: #ffff;">Best solutions for your demanding collection</h2>
+                    <div style="font-size: 18px; font-weight: 400; line-height: 28.8px;color: #ffff;margin-top: 24px;">
+                        Odio vulputate
+                        cras
+                        vel lacinia
+                        turpis volutpat adipiscing. Sollicitudin at velit, blandit tempus nunc in.</div>
+                    <div style="font-size: 18px; font-weight: 400; line-height: 28.8px;color: #ffff;margin-top: 24px;">
+
+                        <div> <img src="./assets/images/check.png" alt="">
+                            Interdum volutpat turpis malesuada ac turpis.</div>
+                        <div> <img src="./assets/images/check.png" alt="">
+                            Tortor ipsum pretium quis nunc.</div>
+                        <div> <img src="./assets/images/check.png" alt="">
+                            Vitae odio a id purus in.</div>
+                    </div>
+                    <button class="explore-xinder-button">Explore Xinder</button>
+                </div>
+                <div class="col-5">
+                    <img src="./assets/images/col-content.png" style="height: 320px;margin-top: 30px;" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Best solution  -->
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
