art gal created

--- a/index.html
+++ b/index.html
@@ -375,6 +375,25 @@
     </section>
     <!-- Best solution  -->
 
+    <!-- Art gal  -->
+    <section class="art-gal">
+        <div class="row">
+            <div class="col-6">
+                <img src="./assets/images/video.png" alt="">
+            </div>
+            <div class="col-4" style="margin: 90px 0px 90px 80px;">
+                <div style="font-size: 20px;"><span style="color: #475569;">Marie Poirot, Co-Founder </span><span
+                        style="color: #2563EB;">Art-Gal</span>
+                </div>
+                <div style="line-height: 30.4px;" class="mt-3">
+                    “Id urna, nisl, ut quam. Diam suspendisse fringilla quam arcu mattis est velit in. Nibh in purus sit
+                    convallis phasellus ut. Neque suspendisse a habitasse commodo.”
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Art gal  -->
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
