--- a/index.html
+++ b/index.html
@@ -394,6 +394,59 @@
     </section>
     <!-- Art gal  -->
 
+    <!-- Art events  -->
+    <section class="art-events">
+        <div class="container">
+            <div class="art-title d-flex justify-content-between " style="margin-bottom: 24px;">
+                <span>
+                    <h3 style="color: #0F172A;">Art events</h3>
+                </span>
+                <span class="mt-1 sponsor-img-categories categories mt-3 ">Explore All Events<img
+                        src="./assets/images/arrow-right.png" alt=""></span>
+            </div>
+            <div class="d-flex justify-content-evenly ">
+                <div class="card" style="width: 22rem;border: none;">
+                    <img src="./assets/images/art-card.png" class="card-img-top" alt="...">
+                    <div class="card-body p-0 ">
+                        <div
+                            style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
+                            Wild Horse Event</div>
+                        <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui scelerisque
+                            ut eu purus aliquam
+                            vitae habitasse.
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 22rem;border: none;">
+                    <img src="./assets/images/color.png" class="card-img-top" alt="...">
+                    <div class="card-body p-0 ">
+                        <div
+                            style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
+                            Great Colors</div>
+                        <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui scelerisque
+                            ut eu purus aliquam
+                            vitae habitasse.
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 22rem;border: none;">
+                    <img src="./assets/images/father-day.png" class="card-img-top" alt="...">
+                    <div class="card-body p-0 ">
+                        <div
+                            style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
+                            Happy Father’s Day</div>
+                        <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui scelerisque
+                            ut eu purus aliquam
+                            vitae habitasse.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Art events  -->
+
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
