add more section added

--- a/index.html
+++ b/index.html
@@ -446,6 +446,21 @@
     </section>
     <!-- Art events  -->
 
+    <!-- Add more  -->
+    <section class="add-more">
+        <div class="container">
+            <div class="row">
+                <div class="col-8">
+                    <h2 style="color: #ffff;margin-top: 138px;">Add more masterpieces to your growing collection</h2>
+                    <button class="explore-xinder-button">Join Now</button>
+                </div>
+                <div class="col-4">
+                    <img src="./assets/images/add-more character.png" style="height: 400px;margin-top: 80px;" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Add more  -->
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
