--- a/index.html
+++ b/index.html
@@ -377,17 +377,20 @@
 
     <!-- Art gal  -->
     <section class="art-gal">
-        <div class="row">
-            <div class="col-6">
-                <img src="./assets/images/video.png" alt="">
-            </div>
-            <div class="col-4" style="margin: 90px 0px 90px 80px;">
-                <div style="font-size: 20px;"><span style="color: #475569;">Marie Poirot, Co-Founder </span><span
-                        style="color: #2563EB;">Art-Gal</span>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <img src="./assets/images/video.png" alt="">
                 </div>
-                <div style="line-height: 30.4px;" class="mt-3">
-                    “Id urna, nisl, ut quam. Diam suspendisse fringilla quam arcu mattis est velit in. Nibh in purus sit
-                    convallis phasellus ut. Neque suspendisse a habitasse commodo.”
+                <div class="col-4" style="margin: 90px 0px 90px 80px;">
+                    <div style="font-size: 20px;"><span style="color: #475569;">Marie Poirot, Co-Founder </span><span
+                            style="color: #2563EB;">Art-Gal</span>
+                    </div>
+                    <div style="line-height: 30.4px;" class="mt-3">
+                        “Id urna, nisl, ut quam. Diam suspendisse fringilla quam arcu mattis est velit in. Nibh in purus
+                        sit
+                        convallis phasellus ut. Neque suspendisse a habitasse commodo.”
+                    </div>
                 </div>
             </div>
         </div>
@@ -461,6 +464,89 @@
         </div>
     </section>
     <!-- Add more  -->
+
+    <!-- Footer  -->
+    <footer class="footer">
+        <div class="container">
+            <div class="list d-flex justify-content-evenly ">
+                <ul style="width: 173px;">
+                    <li><img src="./assets/images/categories.png" alt=""></li>
+                    <li class="foot-li">User Interface</li>
+                    <li class="foot-li">User Experience</li>
+                    <li class="foot-li">Digital Media</li>
+                    <li class="foot-li">Lifestyle</li>
+                    <li class="foot-li">Programming</li>
+                    <li class="foot-li">Animation</li>
+
+                </ul>
+                <ul style="width: 173px;">
+                    <li><img src="./assets/images/product.png" alt=""></li>
+                    <li class="foot-li">Pricing</li>
+                    <li class="foot-li">Overview</li>
+                    <li class="foot-li">Browse</li>
+                    <li class="foot-li">Accessibility</li>
+                    <li class="foot-li">Five</li>
+                    <li class="foot-li">Changelog</li>
+                </ul>
+                <ul style="width: 173px;">
+                    <li><img src="./assets/images/solution.png" alt=""></li>
+                    <li class="foot-li">Brainstorming</li>
+                    <li class="foot-li">Ideation</li>
+                    <li class="foot-li">Wireframing</li>
+                    <li class="foot-li">Research</li>
+                    <li class="foot-li">Design</li>
+                    <li class="foot-li">Concept</li>
+                </ul>
+                <ul style="width: 173px;">
+                    <li><img src="./assets/images/resources.png" alt=""></li>
+                    <li class="foot-li">Help Center</li>
+                    <li class="foot-li">Blog</li>
+                    <li class="foot-li">Tutorials</li>
+                    <li class="foot-li">FAQs</li>
+                    <li class="foot-li">Community</li>
+                    <li class="foot-li">Events</li>
+                </ul>
+                <ul style="width: 173px;">
+                    <li><img src="./assets/images/support.png" alt=""></li>
+                    <li class="foot-li">Contact Us</li>
+                    <li class="foot-li">Developers</li>
+                    <li class="foot-li">Documentation</li>
+                    <li class="foot-li">Integrations</li>
+                    <li class="foot-li">Reports</li>
+                    <li class="foot-li">Webinar</li>
+                </ul>
+                <ul style="width: 173px;">
+                    <li><img src="./assets/images/company.png" alt=""></li>
+                    <li class="foot-li">About</li>
+                    <li class="foot-li">Press</li>
+                    <li class="foot-li">Events</li>
+                    <li class="foot-li">Careers</li>
+                    <li class="foot-li">Customers</li>
+                    <li class="foot-li">Partners</li>
+                </ul>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-between" style="margin-top: 48px;">
+                <div class="all-rights-text">@ 2023 Xinder, Inc. All rights reserved.</div>
+                <div class="icons">
+                    <span><img src="./assets/images/youtube.png" class="social-icons" alt=""></span>
+                    <span><img src="./assets/images/facebook.png" class="social-icons" alt=""></span>
+                    <span><img src="./assets/images/twitter.png" class="social-icons" alt=""></span>
+                    <span><img src="./assets/images/instagram.png" class="social-icons" alt=""></span>
+                    <span><img src="./assets/images/linkedin.png" class="social-icons" alt=""></span>
+                </div>
+            </div>
+            <div style="font-size: 12px;font-weight: 400;line-height: 16.8px;margin-top: 24px;">In sed posuere sed
+                ullamcorper feugiat.
+                Lacinia elit neque,
+                ipsum, non. Tellus
+                mattis enim volutpat
+                habitasse. Semper posuere lectus consectetur aliquam et ullamcorper. Dictumst aenean justo fames diam
+                eget volutpat vestibulum elit. Blandit aliquet bibendum pellentesque turpis id penatibus faucibus id
+                nunc. Aenean rhoncus, erat pellentesque eu. Quis morbi condimentum phasellus in ultricies eu amet.</div>
+    </footer>
+    <!-- Footer  -->
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
