--- a/index.html
+++ b/index.html
@@ -397,6 +397,27 @@
     </section>
     <!-- Art gal  -->
 
+    <!-- Be incredible  -->
+    <section class="be-incredible">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <h2 style="color: #ffff;">Be incredible</h2>
+                    <div style="font-size: 18px; font-weight: 400; line-height: 28.8px;color: #ffff;margin-top: 24px;">
+                        Nec ultricies eget placerat ultricies eleifend dignissim aliquet sapien. Senectus vestibulum,
+                        eget erat at et congue cursus pretium.</div>
+
+                    <button class="explore-xinder-button">Explore Xinder</button>
+                </div>
+                <div class="col-5">
+                    <img src="./assets/images/row.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Be incredible  -->
+
+
     <!-- Art events  -->
     <section class="art-events">
         <div class="container">
