--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-6">
-                    <img src="./assets/images/video.png" alt="">
+                    <img src="./assets/images/video.png" class="hover" alt="">
                 </div>
                 <div class="col-4" style="margin: 90px 0px 90px 80px;">
                     <div style="font-size: 20px;"><span style="color: #475569;">Marie Poirot, Co-Founder </span><span
@@ -429,7 +429,7 @@
                         src="./assets/images/arrow-right.png" alt=""></span>
             </div>
             <div class="d-flex justify-content-evenly ">
-                <div class="card" style="width: 22rem;border: none;">
+                <div class="card hover" style="width: 22rem;border: none;">
                     <img src="./assets/images/art-card.png" class="card-img-top" alt="...">
                     <div class="card-body p-0 ">
                         <div
@@ -441,7 +441,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card" style="width: 22rem;border: none;">
+                <div class="card hover" style="width: 22rem;border: none;">
                     <img src="./assets/images/color.png" class="card-img-top" alt="...">
                     <div class="card-body p-0 ">
                         <div
@@ -453,7 +453,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card" style="width: 22rem;border: none;">
+                <div class="card hover" style="width: 22rem;border: none;">
                     <img src="./assets/images/father-day.png" class="card-img-top" alt="...">
                     <div class="card-body p-0 ">
                         <div
@@ -550,11 +550,11 @@
             <div class="d-flex justify-content-between" style="margin-top: 48px;">
                 <div class="all-rights-text">@ 2023 Xinder, Inc. All rights reserved.</div>
                 <div class="icons">
-                    <span><img src="./assets/images/youtube.png" class="social-icons" alt=""></span>
-                    <span><img src="./assets/images/facebook.png" class="social-icons" alt=""></span>
-                    <span><img src="./assets/images/twitter.png" class="social-icons" alt=""></span>
-                    <span><img src="./assets/images/instagram.png" class="social-icons" alt=""></span>
-                    <span><img src="./assets/images/linkedin.png" class="social-icons" alt=""></span>
+                    <span><img src="./assets/images/youtube.png" class="social-icons hover" alt=""></span>
+                    <span><img src="./assets/images/facebook.png" class="social-icons hover" alt=""></span>
+                    <span><img src="./assets/images/twitter.png" class="social-icons hover" alt=""></span>
+                    <span><img src="./assets/images/instagram.png" class="social-icons hover" alt=""></span>
+                    <span><img src="./assets/images/linkedin.png" class="social-icons hover" alt=""></span>
                 </div>
             </div>
             <div style="font-size: 12px;font-weight: 400;line-height: 16.8px;margin-top: 24px;">In sed posuere sed
