--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- Navbar  -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
-            <div class="container">
+            <div class="container" style="margin-top: 24px;">
                 <a class="navbar-brand" href="#"><img src="./assets/images/xinder.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -418,6 +418,30 @@
     <!-- Be incredible  -->
 
 
+    <!-- <div class="container">
+        <div class="row">
+            <div class="col-1">
+                <a href="#" class="btn btn-secondary float-left" id="prev-slide">Previous</a>
+            </div>
+            <div class="col-10">
+                <div class="slider-container">
+                    <div class="slider-card active">
+                        <img src="./assets/images/color.png" alt="Image 1">
+                    </div>
+                    <div class="slider-card">
+                        <img src="./assets/images/color.png" alt="Image 2">
+                    </div>
+                    <div class="slider-card">
+                        <img src="./assets/images/color.png" alt="Image 3">
+                    </div>
+                </div>
+            </div>
+            <div class="col-1">
+                <a href="#" class="btn btn-secondary float-right" id="next-slide">Next</a>
+            </div>
+        </div>
+    </div> -->
+
     <!-- Art events  -->
     <section class="art-events">
         <div class="container">
@@ -570,6 +594,10 @@
 
 
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
