--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
     <!-- Featured art category  -->
 
-    <!-- Last masterpiece  -->
+    <!-- Lastest masterpiece  -->
     <section class="last-masterpiece">
         <div class="container">
             <div class="art-title d-flex justify-content-between ">
@@ -314,7 +314,7 @@
             </div>
         </div>
     </section>
-    <!-- Last masterpiece  -->
+    <!-- Lastest masterpiece  -->
 
     <!-- Expanding services  -->
     <section class="expanding-services">
@@ -514,8 +514,9 @@
     <footer class="footer">
         <div class="container">
             <div class="list d-flex justify-content-evenly ">
-                <ul style="width: 173px;">
-                    <li><img src="./assets/images/categories.png" alt=""></li>
+                <ul>
+                    <li><img src=" ./assets/images/categories.png" alt="">
+                    </li>
                     <li class="foot-li">User Interface</li>
                     <li class="foot-li">User Experience</li>
                     <li class="foot-li">Digital Media</li>
@@ -524,8 +525,9 @@
                     <li class="foot-li">Animation</li>
 
                 </ul>
-                <ul style="width: 173px;">
-                    <li><img src="./assets/images/product.png" alt=""></li>
+                <ul>
+                    <li><img src=" ./assets/images/product.png" alt="">
+                    </li>
                     <li class="foot-li">Pricing</li>
                     <li class="foot-li">Overview</li>
                     <li class="foot-li">Browse</li>
@@ -533,8 +535,9 @@
                     <li class="foot-li">Five</li>
                     <li class="foot-li">Changelog</li>
                 </ul>
-                <ul style="width: 173px;">
-                    <li><img src="./assets/images/solution.png" alt=""></li>
+                <ul>
+                    <li><img src=" ./assets/images/solution.png" alt="">
+                    </li>
                     <li class="foot-li">Brainstorming</li>
                     <li class="foot-li">Ideation</li>
                     <li class="foot-li">Wireframing</li>
@@ -542,8 +545,9 @@
                     <li class="foot-li">Design</li>
                     <li class="foot-li">Concept</li>
                 </ul>
-                <ul style="width: 173px;">
-                    <li><img src="./assets/images/resources.png" alt=""></li>
+                <ul>
+                    <li><img src=" ./assets/images/resources.png" alt="">
+                    </li>
                     <li class="foot-li">Help Center</li>
                     <li class="foot-li">Blog</li>
                     <li class="foot-li">Tutorials</li>
@@ -551,8 +555,9 @@
                     <li class="foot-li">Community</li>
                     <li class="foot-li">Events</li>
                 </ul>
-                <ul style="width: 173px;">
-                    <li><img src="./assets/images/support.png" alt=""></li>
+                <ul>
+                    <li><img src=" ./assets/images/support.png" alt="">
+                    </li>
                     <li class="foot-li">Contact Us</li>
                     <li class="foot-li">Developers</li>
                     <li class="foot-li">Documentation</li>
@@ -560,8 +565,9 @@
                     <li class="foot-li">Reports</li>
                     <li class="foot-li">Webinar</li>
                 </ul>
-                <ul style="width: 173px;">
-                    <li><img src="./assets/images/company.png" alt=""></li>
+                <ul>
+                    <li><img src=" ./assets/images/company.png" alt="">
+                    </li>
                     <li class="foot-li">About</li>
                     <li class="foot-li">Press</li>
                     <li class="foot-li">Events</li>
