hover effect added to cards

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div id="slider-container">
                     <span onclick="slideRight()" class="btn"></span>
                     <div id="slider">
-                        <div class="slide">
+                        <div class="slide sponsor-img-categories">
                             <div class="card" style="width: 16rem;border :none">
                                 <img src="./assets/images/slide-card-1.png" class="card-img-top" alt="...">
                                 <div class="card-body d-flex pb-4 ">
@@ -182,7 +182,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide sponsor-img-categories">
                             <div class="card" style="width: 16rem;border :none">
                                 <img src="./assets/images/slide-crad-2.png" class="card-img-top" alt="...">
                                 <div class="card-body d-flex pb-4 ">
@@ -200,7 +200,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide sponsor-img-categories">
                             <div class="card" style="width: 16rem;border :none">
                                 <img src="./assets/images/slide-crad-3.png" class="card-img-top" alt="...">
                                 <div class="card-body d-flex pb-4 ">
@@ -218,7 +218,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide sponsor-img-categories">
                             <div class="card" style="width: 16rem;border :none">
                                 <img src="./assets/images/slide-crad-4.png" class="card-img-top" alt="...">
                                 <div class="card-body d-flex pb-4 ">
@@ -236,7 +236,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide sponsor-img-categories">
                             <div class="card" style="width: 16rem;border :none">
                                 <img src="./assets/images/slide-card-1.png" class="card-img-top" alt="...">
                                 <div class="card-body d-flex pb-4 ">
@@ -254,7 +254,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide sponsor-img-categories">
                             <div class="card" style="width: 16rem;border :none">
                                 <img src="./assets/images/slide-crad-2.png" class="card-img-top" alt="...">
                                 <div class="card-body d-flex pb-4 ">
@@ -272,7 +272,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide sponsor-img-categories">
                             <div class="card" style="width: 16rem;border :none">
                                 <img src="./assets/images/slide-crad-3.png" class="card-img-top" alt="...">
                                 <div class="card-body d-flex pb-4 ">
@@ -290,7 +290,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide sponsor-img-categories">
                             <div class="card" style="width: 16rem;border :none">
                                 <img src="./assets/images/slide-crad-4.png" class="card-img-top" alt="...">
                                 <div class="card-body d-flex pb-4 ">
