--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </div>
                             <input type="text" class="hero-input"
                                 placeholder="search for artists, work name, or category">
-                            <button class="hero-inpput-btn"><span class="search-text">Search</span></button>
+                            <button class="hero-input-btn"><span class="search-text">Search</span></button>
                             <div class="mt-3">
                                 <span class="option-text">Oil Painting</span>
                                 <span class="option-text">Abstract Art</span>
