--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </nav>
         <!-- Navbar  -->
         <!-- Hero Section  -->
-        <section class="hero-section">
+        <!-- <section class="hero-section">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
@@ -62,33 +62,31 @@
                             <div class="search-icon">
                                 <img src="./assets/images/search.png" style="position: relative; top: 36px; left: 15px;"
                                     alt="">
-                                <!-- You can use any search icon you prefer, in this example, we're using Font Awesome -->
-                            </div>
-                            <input type="text" class="hero-input"
-                                placeholder="search for artists, work name, or category">
-                            <button class="hero-input-btn"><span class="search-text">Search</span></button>
-                            <div class="mt-3">
-                                <span class="option-text">Oil Painting</span>
-                                <span class="option-text">Abstract Art</span>
-                                <span class="option-text">Sculpture</span>
-                                <span class="option-text">Art Deco</span>
-                                <span class="option-text">Pop Art</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <img src="./assets/images/hero-section-character.png" class="hero-img" alt="">
-                    </div>
-                </div>
+        </div>
+        <input type="text" class="hero-input" placeholder="search for artists, work name, or category">
+        <button class="hero-input-btn"><span class="search-text">Search</span></button>
+        <div class="mt-3">
+            <span class="option-text">Oil Painting</span>
+            <span class="option-text">Abstract Art</span>
+            <span class="option-text">Sculpture</span>
+            <span class="option-text">Art Deco</span>
+            <span class="option-text">Pop Art</span>
+        </div>
+        </div>
+        </div>
+        <div class="col-lg-5">
+            <img src="./assets/images/hero-section-character.png" class="hero-img" alt="">
+        </div>
+        </div>
 
-            </div>
-        </section>
+        </div>
+        </section> -->
         <!-- Hero Section  -->
     </header>
     <!-- Header  -->
 
     <!-- sponsor  -->
-    <section class="sponser">
+    <!-- <section class="sponser">
         <div class="marquee-container">
             <div class="marquee">
                 <div class="d-flex justify-content-center" style="padding-top: 40px;padding-bottom: 40px;">
@@ -110,11 +108,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- sponsor  -->
 
     <!-- Featured art category  -->
-    <section class="featured-art-category">
+    <!-- <section class="featured-art-category">
         <div class="container">
             <div class="art-title d-flex justify-content-between ">
                 <span>
@@ -147,11 +145,11 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
     <!-- Featured art category  -->
 
     <!-- Lastest masterpiece  -->
-    <section class="last-masterpiece">
+    <!-- <section class="last-masterpiece">
         <div class="container">
             <div class="art-title d-flex justify-content-between ">
                 <span>
@@ -313,11 +311,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Lastest masterpiece  -->
 
     <!-- Expanding services  -->
-    <section class="expanding-services">
+    <!-- <section class="expanding-services">
         <h3 style="color: #0F172A;text-align: center;">Expanding Services</h3>
         <div class="d-flex justify-content-center" style="margin-top: 80px;">
             <div class="sponsor-img-expanding">
@@ -342,11 +340,11 @@
         <div class="d-flex justify-content-center align-items-center" style="margin-top:80px;">
             <button class="find-service-btn"><span class="search-text">Find Services</span></button>
         </div>
-    </section>
+    </section> -->
     <!-- Expanding services  -->
 
     <!-- Best solution  -->
-    <section class="best-solution">
+    <!-- <section class="best-solution">
         <div class="container">
             <div class="row">
                 <div class="col-7">
@@ -372,11 +370,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Best solution  -->
 
     <!-- Art gal  -->
-    <section class="art-gal">
+    <!-- <section class="art-gal">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -394,11 +392,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Art gal  -->
 
     <!-- Be incredible  -->
-    <section class="be-incredible">
+    <!-- <section class="be-incredible">
         <div class="container">
             <div class="row">
                 <div class="col-4">
@@ -414,7 +412,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Be incredible  -->
 
 
@@ -443,7 +441,7 @@
     </div> -->
 
     <!-- Art events  -->
-    <section class="art-events">
+    <!-- <section class="art-events">
         <div class="container">
             <div class="art-title d-flex justify-content-between " style="margin-bottom: 24px;">
                 <span>
@@ -453,7 +451,7 @@
                         src="./assets/images/arrow-right.png" alt=""></span>
             </div>
             <div class="d-flex justify-content-evenly ">
-                <div class="card hover" style="width: 22rem;border: none;">
+                <div class="card hover sponsor-img-categories" style="width: 22rem;border: none;">
                     <img src="./assets/images/art-card.png" class="card-img-top" alt="...">
                     <div class="card-body p-0 ">
                         <div
@@ -465,7 +463,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card hover" style="width: 22rem;border: none;">
+                <div class="card hover sponsor-img-categories" style="width: 22rem;border: none;">
                     <img src="./assets/images/color.png" class="card-img-top" alt="...">
                     <div class="card-body p-0 ">
                         <div
@@ -477,7 +475,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card hover" style="width: 22rem;border: none;">
+                <div class="card hover sponsor-img-categories" style="width: 22rem;border: none;">
                     <img src="./assets/images/father-day.png" class="card-img-top" alt="...">
                     <div class="card-body p-0 ">
                         <div
@@ -491,11 +489,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Art events  -->
 
     <!-- Add more  -->
-    <section class="add-more">
+    <!-- <section class="add-more">
         <div class="container">
             <div class="row">
                 <div class="col-8">
@@ -507,11 +505,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Add more  -->
 
     <!-- Footer  -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="list d-flex justify-content-evenly ">
                 <ul>
@@ -595,7 +593,7 @@
                 habitasse. Semper posuere lectus consectetur aliquam et ullamcorper. Dictumst aenean justo fames diam
                 eget volutpat vestibulum elit. Blandit aliquet bibendum pellentesque turpis id penatibus faucibus id
                 nunc. Aenean rhoncus, erat pellentesque eu. Quis morbi condimentum phasellus in ultricies eu amet.</div>
-    </footer>
+    </footer> -->
     <!-- Footer  -->
 
 
@@ -603,7 +601,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+<script src="https://www.youtube.com/iframe_api"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
