hero section has been responsive

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </nav>
         <!-- Navbar  -->
         <!-- Hero Section  -->
-        <!-- <section class="hero-section">
+        <section class="hero-section">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
@@ -62,25 +62,26 @@
                             <div class="search-icon">
                                 <img src="./assets/images/search.png" style="position: relative; top: 36px; left: 15px;"
                                     alt="">
-        </div>
-        <input type="text" class="hero-input" placeholder="search for artists, work name, or category">
-        <button class="hero-input-btn"><span class="search-text">Search</span></button>
-        <div class="mt-3">
-            <span class="option-text">Oil Painting</span>
-            <span class="option-text">Abstract Art</span>
-            <span class="option-text">Sculpture</span>
-            <span class="option-text">Art Deco</span>
-            <span class="option-text">Pop Art</span>
-        </div>
-        </div>
-        </div>
-        <div class="col-lg-5">
-            <img src="./assets/images/hero-section-character.png" class="hero-img" alt="">
-        </div>
-        </div>
+                            </div>
+                            <input type="text" class="hero-input"
+                                placeholder="search for artists, work name, or category">
+                            <button class="hero-input-btn"><span class="search-text">Search</span></button>
+                            <div class="mt-3 option-div">
+                                <button class="option-text">Oil Painting</button>
+                                <button class="option-text">Abstract Art</button>
+                                <button class="option-text">Sculpture</button>
+                                <button class="option-text">Art Deco</button>
+                                <button class="option-text">Pop Art</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 hide-md hide-lg hide-sm hide-xs">
+                        <img src="./assets/images/hero-section-character.png" class="hero-img img-fluid " alt="">
+                    </div>
+                </div>
 
-        </div>
-        </section> -->
+            </div>
+        </section>
         <!-- Hero Section  -->
     </header>
     <!-- Header  -->
