marque has been responsive

--- a/index.html
+++ b/index.html
@@ -87,29 +87,33 @@
     <!-- Header  -->
 
     <!-- sponsor  -->
-    <!-- <section class="sponser">
-        <div class="marquee-container">
-            <div class="marquee">
-                <div class="d-flex justify-content-center" style="padding-top: 40px;padding-bottom: 40px;">
-                    <div class="sponsor-img">
-                        <img src="./assets/images/smartfinder.png" alt="">
-                    </div>
-                    <div class="sponsor-img">
-                        <img src="./assets/images/zoomerr.png" alt="">
-                    </div>
-                    <div class="sponsor-img">
-                        <img src="./assets/images/shells.png" alt="">
-                    </div>
-                    <div class="sponsor-img">
-                        <img src="./assets/images/waves.png" alt="">
-                    </div>
-                    <div class="sponsor-img">
-                        <img src="./assets/images/artvenue.png" alt="">
+    <section class="sponser">
+        <div class="container">
+            <div class="marquee-container">
+                <div class="marquee">
+                    <div class="d-flex justify-content-center" style="padding-top: 40px;padding-bottom: 40px;">
+                        <div class="sponsor-img">
+                            <img src="./assets/images/smartfinder.png" alt="">
+                        </div>
+                        <div class="sponsor-img">
+                            <img src="./assets/images/zoomerr.png" alt="">
+                        </div>
+                        <div class="sponsor-img">
+                            <img src="./assets/images/shells.png" alt="">
+                        </div>
+                        <div class="sponsor-img">
+                            <img src="./assets/images/waves.png" alt="">
+                        </div>
+                        <div class="sponsor-img">
+                            <img src="./assets/images/artvenue.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section> -->
+
+    </section>
+
     <!-- sponsor  -->
 
     <!-- Featured art category  -->
