featured art slider responsive for mobile also

--- a/index.html
+++ b/index.html
@@ -164,26 +164,28 @@
             <div class="slide" style="
             background-image: url('./assets/images/content_box_1.png');
           ">
-                <h3>Vases Family</h3>
-            </div>
-            <div class="slide active" style="
-            background-image: url('./assets/images/content_box_2.png');
-          ">
-                <h3>Camel Portrait</h3>
+
             </div>
             <div class="slide " style="
+            background-image: url('./assets/images/content_box_2.png');
+          ">
+            </div>
+            <div class="slide active " style="
             background-image: url('./assets/images/content_box_3.png');
           ">
-                <h3>Euforia</h3>
             </div>
             <div class="slide" style="
             background-image: url('./assets/images/content_box_4.png');
     ">
-                <h3>Classic Watch</h3>
 
 
             </div>
+            <div class="slide" style="
+            background-image: url('./assets/images/content_box_5.png');
+    ">
 
+
+            </div>
 
         </div>
     </div>
