feature art section has been responsive

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     </section>
     <div class="container  hide-xxl hide-xl hide-lg">
         <div class="art-title d-flex justify-content-between ">
-            <span>
-                <h3 style="color: #0F172A;">Featured art categories</h3>
+            <span class="mt-3 mb-3 ">
+                <h4 style="color: #0F172A;">Featured art categories</h4>
             </span>
             <span class="mt-1 sponsor-img-categories categories mt-3 ">View All Categories <img
                     src="./assets/images/arrow-right.png" alt=""></span>
